CHANGES.txt - 03/06/2000
------------------------

CHANGES IN HTMLDOC v1.8.6

    CHANGES

	- Minor source changes for OS/2 compilation.
	- SUP and SUB now raise/lower text more to be consistent with
	  browser look-n-feel.

    BUG FIXES

	- Cells that spanned more than two pages were drawn with boxes
	  around them rather than just the sides.
	- The stylesheet info in the HTML output specified the H1 size
	  for all headings.
	- The title page was incorrectly formatted when an image was
	  specified - the text start position was computed using the
	  pixel height of the title image and not the formatted height.


CHANGES IN HTMLDOC v1.8.5

    NEW FEATURES

	- New "--titlefile" option to include an HTML file for
	  the title page(s).
	- New 'C' header/footer option to show current page
	  number within chapter or HTML file.
	- Allow adding of .book files to import all HTML files
	  in the book.
	- New "HALF PAGE" page comment to feed 1/2 page.
	- Added VALIGN and HEIGHT support in tables.

    CHANGES

	- Now optimize link objects in PDF files (provides a 40k
	  reduction in file size for the HTMLDOC manual alone)
	- Table rows that cross page boundaries are now rendered
	  more like Netscape and MSIE.
	- Now support HTMLDOC_DATA and HTMLDOC_HELP environment
	  variables under UNIX (for alternate install directory)
	- Now show error messages when HTMLDOC can't open the
	  AFM, character set, or PostScript glyph files.
	- The logo image is now scaled to its "natural" size (as
	  it would appear in a web browser)
	- Now recognize VALIGN="MIDDLE" or VALIGN="CENTER".

    BUG FIXES

	- Generation of PDF files to the standard output (i.e.
	  to the web server + browser) didn't work on some
	  versions of UNIX.  HTMLDOC now writes the PDF output
	  to a temporary file and then copies it to the standard
	  output as needed.
	- PDF links were missing the first 5 characters in the
	  filename; the code was trying to skip over the "file:"